--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,7 @@
             <li class="pay"><a class="pay" href="PayRole.html" style="text-decoration: none;">Pay Role Management Webpage</a></li>
             <li class="Mouse"><a class="Mouse" href="ParallaxEffect.html" style="text-decoration: none;">Mousemove parallax effects</a></li>
             <li class="txt"><a class="txt" href="textToSpeech.html" style="text-decoration: none;">Text to Speech</a></li>
+            <li class="blog"><a class="blog" href="https://nubea.github.io/blogProject/" style="text-decoration: none;">Blog Platform</a></li>
         </ul>
     </div>
 </body>
