--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
             <li class="Mouse"><a class="Mouse" href="ParallaxEffect.html" style="text-decoration: none;">Mousemove parallax effects</a></li>
             <li class="txt"><a class="txt" href="textToSpeech.html" style="text-decoration: none;">Text to Speech</a></li>
             <li class="blog"><a class="blog" href="https://nubea.github.io/blogProject/" style="text-decoration: none;">Blog Platform</a></li>
+            <li class="reactApp"><a class="reactApp" href="https://nubea.github.io/reactAssignment/" style="text-decoration: none;">React App Project</a></li>
         </ul>
     </div>
 </body>
