--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
             <li class="txt"><a class="txt" href="textToSpeech.html" style="text-decoration: none;">Text to Speech</a></li>
             <li class="blog"><a class="blog" href="https://nubea.github.io/blogProject/" style="text-decoration: none;">Blog Platform</a></li>
             <li class="reactApp"><a class="reactApp" href="https://nubea.github.io/reactAssignment/" style="text-decoration: none;">React App Project</a></li>
+            <li class="auth"><a class="auth" href="https://nubea.github.io/userAuth/" style="text-decoration: none;">Auth React App</a></li>
         </ul>
     </div>
 </body>
